Jackson/Guava updates (#61)
* bump jackson to 2.11.1

* bump guava to 29.0

* rm docker java 1.8 specific runtime flags